--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ desktop.ini
 _Pending
 
 # Altium Designer folders and files for ignore
-
+__Previews
 History
 
 # Proteus folders and files for ignore
